# openai_devpost_hackathon

./: .dockerignore  .editorconfig  .env.example  .gitignore  .gitleaks.toml  AGENTS.md  Dockerfile  LICENSE  README.md  checklist.md  nixpacks.toml  package.json  pnpm-lock.yaml  prd.md  pyproject.toml  railway.toml  scope.md  spec.md
apps/api/: pyproject.toml
apps/api/app/: __init__.py  main.py  session_probe.py  settings.py
apps/api/app/agents/: __init__.py  director.py  fairness.py  guarded_tool.py  instructions.py  orchestration.py  provider.py  recovery.py  resilience.py  rules.py  runtime.py  schemas.py  sessions.py  specialist_evidence.py  specialist_runtime.py  specialist_tools.py  strategy.py  weather.py  workflow_orchestrator.py
apps/api/app/api/: __init__.py  audit.py  director.py  operations.py  problems.py  readiness.py  routes.py  schedules.py  setup_models.py  workspace.py
apps/api/app/approvals/: __init__.py  service.py
apps/api/app/deployment/: __init__.py  runtime.py  worker.py
apps/api/app/domain/: __init__.py  audit.py  common.py  constraints.py  matches.py  schedules.py  states.py  teams.py  tournament.py  venues.py  weather.py
apps/api/app/fairness/: __init__.py  evaluator.py  metrics.py
apps/api/migrations/: README.md
apps/api/spikes/: __init__.py  fallback_provider.py  openai_capabilities.py
apps/api/tests/: test_app.py  test_fallback_provider_spike.py  test_openai_capabilities_spike.py  test_scaffold_contract.py  test_secret_boundaries.py  test_session_probe.py  test_settings.py  test_vercel_config.py
evals/: README.md  run.py  (+1 more)
(+256 files in other folders)
