[project]
name = "crickops"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = ["crickops-api"]

[dependency-groups]
dev = [
  "psycopg[binary]>=3.2,<3.3",
  "pytest==8.4.1",
  "ruff==0.12.4",
]

[tool.uv]
package = false

[tool.uv.sources]
crickops-api = { workspace = true }

[tool.uv.workspace]
members = ["apps/api"]

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers"
pythonpath = ["apps/api"]
testpaths = ["apps/api/tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
