[project]
name = "crickops-api"
version = "0.1.0"
description = "CrickOps AI FastAPI service"
requires-python = ">=3.12,<3.13"
dependencies = [
  "fastapi==0.116.1",
  "openai-agents>=0.18,<0.19",
  "tzdata>=2025.2,<2027",
  "uvicorn==0.35.0",
]

[dependency-groups]
dev = [
  "pytest==8.4.1",
  "ruff==0.12.4",
]

[tool.uv]
package = false
