[project]
name = "crickops-api"
version = "0.1.0"
description = "CrickOps AI FastAPI service"
requires-python = ">=3.12,<3.13"
dependencies = [
  "fastapi==0.116.1",
  "httpx==0.28.1",
  "openai-agents[sqlalchemy]>=0.18,<0.19",
  "aiosqlite>=0.20,<0.22",
  "asyncpg>=0.30,<0.31",
  "ortools==9.14.6206",
  "tzdata>=2025.2,<2027",
  "uvicorn==0.35.0",
]

[dependency-groups]
dev = [
  "pytest==8.4.1",
  "ruff==0.12.4",
]

[tool.uv]
package = false
